--- a/LaunchRockets.html
+++ b/LaunchRockets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Banana Experience</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/responsive.css" />
 </head>
 <body>
     <div class="fruit-bowl">
