--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
       <ul>
         <li><a href="#">Mission</a></li>
         <li><a href="#">Launches</a></li>
-        <li><a href="Careers.html">Careers</a></li>
+        <li><a href="./Careers.html">Careers</a></li>
         <li><a href="#">Updates</a></li>
         <li><a href="#">Shop</a></li>
 
-        <li class="mobile-only"><a href="Terra.html">Terra</a></li>
-        <li class="mobile-only"><a href="Aqua.html">Aqua</a></li>
-        <li class="mobile-only"><a href="Aura.html">Aura</a></li>
-        <li class="mobile-only"><a href="DSCOVR.html">DSCOVR</a></li>
-        <li class="mobile-only"><a href="Landsat7.html">Landsat7</a></li>
-        <li class="mobile-only"><a href="LAGEOS.html">LAGEOS</a></li>
-        <li class="mobile-only"><a href="CALIPSO.html">CALIPSO</a></li>
-        <li class="mobile-only"><a href="Jason-1.html">Jason-1</a></li>
+        <li class="mobile-only"><a href="./Terra.html">Terra</a></li>
+        <li class="mobile-only"><a href="./Aqua.html">Aqua</a></li>
+        <li class="mobile-only"><a href="./Aura.html">Aura</a></li>
+        <li class="mobile-only"><a href="./DSCOVR.html">DSCOVR</a></li>
+        <li class="mobile-only"><a href="./Landsat7.html">Landsat7</a></li>
+        <li class="mobile-only"><a href="./LAGEOS.html">LAGEOS</a></li>
+        <li class="mobile-only"><a href="./CALIPSO.html">CALIPSO</a></li>
+        <li class="mobile-only"><a href="./Jason-1.html">Jason-1</a></li>
       </ul>
     </div>
     <header class="main-header">
@@ -37,14 +37,14 @@
       </div>
       <nav class="desktop-main-menu">
         <ul>
-          <li><a href="Terra.html">Terra</a></li>
-          <li><a href="Aqua.html">Aqua</a></li>
-          <li><a href="Aura.html">Aura</a></li>
-          <li><a href="DSCOVR.html">DSCOVR</a></li>
-          <li><a href="Landsat7.html">Landsat7</a></li>
-          <li><a href="LAGEOS.html">LAGEOS</a></li>
-          <li><a href="CALIPSO.html">CALIPSO</a></li>
-          <li><a href="Jason-1.html">Jason-1</a></li>
+          <li><a href="./Terra.html">Terra</a></li>
+          <li><a href="./Aqua.html">Aqua</a></li>
+          <li><a href="./Aura.html">Aura</a></li>
+          <li><a href="./DSCOVR.html">DSCOVR</a></li>
+          <li><a href="./Landsat7.html">Landsat7</a></li>
+          <li><a href="./LAGEOS.html">LAGEOS</a></li>
+          <li><a href="./CALIPSO.html">CALIPSO</a></li>
+          <li><a href="./Jason-1.html">Jason-1</a></li>
         </ul>
       </nav>
     </header>
@@ -59,7 +59,7 @@
     <!-- Section A -->
     <section class="section-a">
       <video autoplay muted loop class="background-video">
-        <source src="/img/section-a.mp4" type="video/mp4">
+        <source src="./img/section-a.mp4" type="video/mp4">
       </video>
       <div class="section-inner">
         <h4>Start Exploring</h4>
@@ -108,7 +108,7 @@
     <!-- Section C -->
     <section class="section-c">
       <video autoplay muted loop class="background-video">
-        <source src="/img/section-c.mp4" type="video/mp4">
+        <source src="./img/section-c.mp4" type="video/mp4">
     </video>
       <div class="section-inner">
         <h4>Start Exploring</h4>
@@ -134,7 +134,7 @@
     <!-- Section D -->
     <section class="section-d">
       <video autoplay muted loop class="background-video">
-        <source src="/img/section-d.mp4" type="video/mp4">
+        <source src="./img/section-d.mp4" type="video/mp4">
     </video>
       <div class="section-inner">
         <h4>Learn More</h4>
