--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <!-- Section E -->
     <section class="section-e">
-      <img src="./img/" alt="Galaxies and Nebulae" />
+      <img src="./img/section-e.jpg" alt="Galaxies and Nebulae" />
       <div class="section-inner">
         <h2>Galaxies and Nebulae</h2>
         <a href="#" class="btn">
